--- a/DummyApp/src/main/res/values/strings.xml
+++ b/DummyApp/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="screen_text">Text</string>
     <string name="button_label">Button</string>
+    <string name="title_item_list">Item List</string>
 </resources>
