Terminado el diseno general de la pantalla de filtro

--- a/DummyApp/src/main/res/values/strings.xml
+++ b/DummyApp/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SEC</string>
+    <string name="app_name">Sport Events-Canary</string>
     <string name="dummy_screen_title">Dummy</string>
     <string name="main_screen_title">SEC</string>
     <string name="action_settings">Settings</string>
