--- a/DummyApp/src/main/res/values/strings.xml
+++ b/DummyApp/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="dummy_screen_title">Dummy</string>
     <string name="main_screen_title">SEC</string>
     <string name="action_settings">Settings</string>
+    <string name="home">Home</string>
     <string name="screen_text">Text</string>
     <string name="button_label">Button</string>
     <string name="spin">Seleccione una isla</string>
