--- a/DummyApp/src/main/res/values/strings.xml
+++ b/DummyApp/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="button_label">Button</string>
     <string name="spin">Seleccione una isla</string>
     <string name="title_item_list">Item List</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_restore">Restore</string>
 </resources>
