--- a/DummyApp/src/main/res/values/strings.xml
+++ b/DummyApp/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="screen_text">Text</string>
     <string name="button_label">Button</string>
     <string name="spin">Seleccione una isla</string>
-    <string name="title_item_list">Item List</string>
+    <string name="title_item_list">Eventos Deportivos</string>
     <string name="action_delete">Delete</string>
     <string name="action_restore">Restore</string>
 </resources>
